--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:fix": "biome check . --write",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run lint && npm run typecheck && npm run build && npm test"
   },
   "keywords": [
     "capnp",
