--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,109 +1,45 @@
-name: CI
+name: CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
+  release:
+    types: [ created ]
 
 jobs:
-  build-ts:
+  test:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
+    - uses: pnpm/action-setup@v2
       with:
         version: 9
-    
-    - name: Install dependencies
-      run: pnpm install
-    
-    - name: Type check
-      run: pnpm run typecheck
-    
-    - name: Lint
-      run: pnpm run lint
-    
-    - name: Build TypeScript
-      run: pnpm run build:ts
-    
-    - name: Test
-      run: pnpm test
+    - run: pnpm install
+    - run: pnpm run typecheck
+    - run: pnpm run lint
+    - run: pnpm run build
+    - run: pnpm test
 
-  build-wasm:
+  publish:
+    needs: test
     runs-on: ubuntu-latest
-    
+    if: github.event_name == 'release'
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Setup Emscripten
-      uses: mymindstorm/setup-emsdk@v14
-      with:
-        version: 'latest'
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
+        registry-url: 'https://registry.npmjs.org'
+    - uses: pnpm/action-setup@v2
       with:
         version: 9
-    
-    - name: Install dependencies
-      run: pnpm install
-    
-    - name: Build WASM
-      run: pnpm run build:wasm
-    
-    - name: Upload WASM artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: wasm-build
-        path: |
-          wasm/dist/capnp_ts_wasm.js
-          wasm/dist/capnp_ts_wasm.wasm
-
-  build-full:
-    needs: [build-ts, build-wasm]
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 9
-    
-    - name: Install dependencies
-      run: pnpm install
-    
-    - name: Download WASM artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: wasm-build
-        path: wasm/dist/
-    
-    - name: Build full package
-      run: pnpm run build:ts
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: full-build
-        path: dist/
+    - run: pnpm install
+    - run: pnpm run build
+    - run: npm publish --access public
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
