feat: restructure CLI to 'capnp gen' command
- Add src/cli.ts as main CLI entry
- Update package.json bin to 'capnp'
- Usage: npx @naeemo/capnp gen schema.capnp -o types.ts
- Fix shebang handling in build

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "LICENSE"
   ],
   "bin": {
-    "capnp-ts-codegen": "./dist/codegen/cli.js"
+    "capnp": "./dist/cli.js"
   },
   "scripts": {
     "build": "rolldown -c rolldown.config.ts",
