ci: use npm instead of pnpm in GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,11 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
-    - uses: pnpm/action-setup@v2
-      with:
-        version: 9
-    - run: pnpm install
-    - run: pnpm run typecheck
-    - run: pnpm run lint
-    - run: pnpm run build
-    - run: pnpm test
+    - run: npm ci
+    - run: npm run typecheck
+    - run: npm run lint
+    - run: npm run build
+    - run: npm test
 
   publish:
     needs: test
@@ -35,11 +32,8 @@ jobs:
       with:
         node-version: '20'
         registry-url: 'https://registry.npmjs.org'
-    - uses: pnpm/action-setup@v2
-      with:
-        version: 9
-    - run: pnpm install
-    - run: pnpm run build
+    - run: npm ci
+    - run: npm run build
     - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
