--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -39,11 +39,10 @@ jobs:
     - name: Copy docs to site
       run: |
         mkdir -p _site
-        cp -r dist _site/
-        cp README.md _site/index.md
+        cp docs/index.html _site/
+        cp README.md _site/
         cp QUICKSTART.md _site/
         cp CHANGELOG.md _site/
-        cp -r docs _site/ 2>/dev/null || true
     
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
